# indian-market-data-platform

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_sync.yml
deploy/: install.sh  market-data-sync.service  market-data-sync.timer
market_data/: __init__.py  cli.py  config.py  huggingface.py  logging_config.py
market_data/assets/: __init__.py  discovery.py  models.py
market_data/downloader/: __init__.py  engine.py  rate_limiter.py
market_data/storage/: __init__.py  catalog.py  parquet_store.py
market_data/validation/: __init__.py  checks.py  cleaner.py  engine.py  models.py
tests/: __init__.py  conftest.py  test_cleaner.py  test_config.py  test_downloader.py  test_huggingface.py  test_models.py  test_storage.py  test_validation.py
