[project]
name = "market-data-platform"
version = "0.1.0"
description = "Production-grade Indian market data ingestion platform for backtesting and quantitative research"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
market-data = "market_data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market_data"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
